--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  1;
+worker_processes  2;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -23,7 +23,7 @@ http {
   sendfile        on;
   #tcp_nopush     on;
 
-  keepalive_timeout  65;
+  keepalive_timeout  300;
 
   #gzip  on;
 
@@ -39,7 +39,7 @@ http {
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
-      client_max_body_size 100M;
+      client_max_body_size 0;
     }
 
     location /{
@@ -55,13 +55,13 @@ http {
         return 200;
       }
 
-      client_max_body_size 100M;
-      client_body_buffer_size 128K;
+      client_max_body_size 0;
+      client_body_buffer_size 1024K;
       add_header Access-Control-Allow-Credentials false;
       add_header Access-Control-Allow-Headers "Content-Type, Accept, Authorization, Origin, User-Agent";
       add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, OPTIONS";
       proxy_set_header X-Forwarded-Protocol $scheme;
-      proxy_read_timeout 30;
+      proxy_read_timeout 300;
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
