--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,13 @@ http {
     listen 80;
     index index.html index.htm;
     root   /usr/share/nginx/html;
+    error_page  404              /50x.html;
+        # redirect server error pages to the static page /50x.html
+        #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   html;
+    }
 
     location /geoserver {
       proxy_pass http://geoserver:8080/geoserver;
