--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+
 user  nginx;
 worker_processes  2;
 
@@ -33,6 +34,9 @@ http {
     index index.html index.htm;
     root   /usr/share/nginx/html;
     error_page  404              /50x.html;
+    location = /50x.html {
+            root   html;
+        }
         # redirect server error pages to the static page /50x.html
         #
     error_page   500 502 503 504  /50x.html;
